<resources>
    <!--    general buttons-->
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop and back</string>

    <!--    main activity-->
    <string name="app_name">N Times</string>
    <string name="rounds_selection">Choose number of rounds in your training</string>
    <string name="rounds_same">All rounds have same timing</string>
    <string name="rests_same">All rests have same timing</string>

    <!--    round activity-->
    <string name="exercises_number">Number of exercises</string>
    <string name="exercises_time">Time of one exercise</string>
    <string name="rest_time">Rest between exercises</string>

    <!--    number picker time strings-->
    <string name="min">min</string>
    <string name="sec">sec</string>

    <!--    rest activity-->
    <string name="round_rest_tim">Rest between rounds</string>
    <string name="rest">Rest</string>

    <!--    check activity-->
    <string name="choice">You picked</string>
    <string name="rounds">rounds, with</string>
    <string name="exercises">exercises</string>
    <string name="exercise_lasts">Exercise times are</string>
    <string name="rest_between_exercises">Rests between exercises are</string>
    <string name="rest_between_rounds">Rests between rounds are</string>

    <string name="round_no">Round <br />no</string>
    <string name="number_of_exercises">Number of <br />exercises</string>
    <string name="exercise_time">Exercise <br />time</string>
    <string name="rest_time_check">Rest <br />time</string>
    <string name="rest_after_round">Rest <br />after round</string>

    <!--    timer-->
    <string name="round">Round</string>
    <string name="exercise">Exercise</string>
    <string name="before_training">s to start</string>
    <string name="exercise_remain">s of work remaining</string>
    <string name="rest_remain">s of rest remaining</string>
    <string name="finish">Good job!</string>
    <string name="again">One more time</string>
    <string name="default_num">0</string>
</resources>