<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".TimeActivity">

        <TextView
                android:id="@+id/textRound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="100dp"
                android:width="70dp"
                android:text="@string/round"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/roundDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:width="70dp"
                android:gravity="center"
                android:text="@string/default_num"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textRound"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/textExercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:width="70dp"
                android:text="@string/exercise"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRound"/>

        <TextView
                android:id="@+id/exerciseDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:width="70dp"
                android:gravity="center"
                android:text="@string/default_num"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textExercise"
                app:layout_constraintTop_toBottomOf="@+id/roundDisplay"/>

        <TextView
                android:id="@+id/remainingDisplay"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:width="70dp"
                android:gravity="center"
                android:text="@string/default_num"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/textExercise" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_remain"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/remainingDisplay"/>

        <Button
                android:id="@+id/timerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="handleTimeButtonClick"
                android:text="@string/pause"
                app:backgroundTint="#FF5722"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remaining"/>

        <Button
                android:id="@+id/stopAndBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="back"
                android:text="@string/stop"
                app:backgroundTint="#F44336"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>